[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Sprites/Egg.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/EggRT.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/EggLT.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/EggRoll1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/EggRoll3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/EggRoll2.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Scripts/Egg.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/EggCrack3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/EggCrack2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/EggCrack1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sfx/warpegg.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sfx/throw.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sfx/brokenegg.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "spin",
"speed": 6.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "rolling",
"speed": 4.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "crack",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 12.2526

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.8024, 11.9484 )

[node name="Egg" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 115
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.125001, -4.76837e-07 )
scale = Vector2( 0.871094, 0.664062 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 3.5 )
shape = SubResource( 5 )

[node name="topChecker" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="topChecker"]
position = Vector2( -0.25, -12.5 )
shape = SubResource( 4 )

[node name="sideChecker" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 17

[node name="sides" type="CollisionShape2D" parent="sideChecker"]
position = Vector2( -1.8024, 2.44843 )
shape = SubResource( 2 )

[node name="soundCrack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="soundThrow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="soundWarp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="sideChecker" to="." method="_on_sideChecker_body_entered"]
